--- a/dateofbirth.html
+++ b/dateofbirth.html
@@ -1,5 +1,3 @@
-<!-- Stap 3: Geboortedatum -->
-
 <!DOCTYPE html>
 
 <html lang="en">
@@ -10,26 +8,27 @@
     <link href='css/styles.css' rel="stylesheet" type='text/css'
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <title>Matchie</title>
-</head>
+  </head>
 
-  <body id="geboortedatum">
-  <script src="javascript/index.js"type="text/javascript"></script>
+  <body>
 
-    <img src="images/logo-datingssite.png" class="logo" alt="Matchie logo">
+    <img src="images/logo-datingssite.png" class="allLogos" alt="Matchie logo">
 
     <header>
       <nav>
-        <a href="firstname.html" class="backButton"><img src="images/nav_pijltje.png" class="pijltjeTerug" alt="navigatie naar vorige pagina"></a>
-        <h1 class="stappen">Stap 3 / 7</h1>
+        <a href="firstname.html"><img src="images/nav_pijltje.png" alt="navigatie naar vorige pagina"></a>
+        <h1 class="steps">Stap 3 / 7</h1>
       </nav>
-      </header>
+    </header>
 
-      <form>
-        <label for="birthdate">Mijn geboortedatum is:</label>
-        <input id="bday" type="date" name="dateOfBirth" value="" onchange="submitBday()" required />
-        <p id="resultBday"></p>
-        <p>Dit is de leeftijd die op uw profiel wordt getoond.</p>
-          <a href="province.html"><button type="submit" class="formButton">Doorgaan</button></a>
-        </form>
-      </body>
+    <form id="addDateOfBirthForm">
+      <label for="birthdate">Mijn geboortedatum is:</label>
+      <input id="bday" type="date" required />
+
+      <p id="resultBday"></p>
+      <p>Dit is de leeftijd die op uw profiel wordt getoond.</p>
+      <a href="province.html">Doorgaan</a>
+    </form>
+    <script src="javascript/index.js"type="text/javascript"></script>
+  </body>
 </html>
