--- a/firstname.html
+++ b/firstname.html
@@ -1,5 +1,3 @@
-<!-- Stap 2: Voornaam -->
-
 <!DOCTYPE html>
 
 <html lang="en">
@@ -12,23 +10,23 @@
     <title>Matchie</title>
 </head>
 
-  <body id="voornaam">
-    <img src="images/logo-datingssite.png" class="logo" alt="Matchie logo">
+  <body>
+    <img src="images/logo-datingssite.png" class="allLogos" alt="Matchie logo">
 
     <header>
       <nav>
-        <a href="index.html" class="backButton"><img src="images/nav_pijltje.png" class="pijltjeTerug" alt="navigatie naar vorige pagina"></a>
-        <h1 class="stappen">Stap 2 / 7</h1>
+        <a href="index.html"><img src="images/nav_pijltje.png" alt="navigatie naar vorige pagina"></a>
+        <h1 class="steps">Stap 2 / 7</h1>
       </nav>
     </header>
 
-    <form>
+    <form id="addFirstNameForm">
       <label> Mijn voornaam is:
-        <input type="text" name="firstName" value="" required />
+        <input type="text" id="firstName" required />
       </label>
 
       <p>Gebruik hiervoor uw echte voornaam, een bijnaam is niet nodig.</p>
-      <a href="dateofbirth.html"><button type="submit" class="formButton">Doorgaan</button></a>
+      <a href="dateofbirth.html" onclick="getFirstNameValue()">Doorgaan</a>
     </form>
 
     <script src="javascript/index.js" type="text/javascript"></script>
