--- a/gender.html
+++ b/gender.html
@@ -1,5 +1,3 @@
-<!-- Stap 5: Gender -->
-
 <!DOCTYPE html>
 
 <html lang="en">
@@ -12,30 +10,30 @@
     <title>Matchie</title>
 </head>
 
-  <body id="manvrouw">
-    <img src="images/logo-datingssite.png" class="logo" alt="Matchie logo">
+  <body>
+    <img src="images/logo-datingssite.png" class="allLogos" alt="Matchie logo">
 
     <header>
       <nav>
-        <a href="province.html" class="backButton"><img src="images/nav_pijltje.png" class="pijltjeTerug" alt="navigatie naar vorige pagina"></a>
-        <h1 class="stappen">Stap 5 / 7</h1>
+        <a href="province.html"><img src="images/nav_pijltje.png" alt="navigatie naar vorige pagina"></a>
+        <h1 class="steps">Stap 5 / 7</h1>
       </nav>
     </header>
 
-    <form>
+    <form id="addGenderForm">
       <fieldset>
         <legend>Ik ben een...</legend>
         <div class="gender">
-          <input id="man" type="radio" name="gender" value="Man" required />
+          <input id="man" type="radio" value="Man" required />
           <label for="man">Man</label>
 
-          <input id="vrouw" type="radio" name="gender" value="Vrouw" required />
-          <label for="vrouw">Vrouw</label>
-
+          <input id="woman" type="radio" value="Vrouw" required />
+          <label for="woman">Vrouw</label>
         </div>
+
         <p>Woohoo! Je bent bijna klaar!</p>
 
-        <a href="images.html"><button type="submit" class="formButton">Doorgaan</button></a>
+        <a href="images.html">Doorgaan</a>
       </fieldset>
     </form>
 
