--- a/images.html
+++ b/images.html
@@ -1,5 +1,3 @@
-<!-- Stap 6: Afbeelding toevoegen -->
-
 <!DOCTYPE html>
 
 <html lang="en">
@@ -12,24 +10,24 @@
     <title>Matchie</title>
 </head>
 
-  <body id="fotostoevoegen">
-    <img src="images/logo-datingssite.png" class="logo" alt="Matchie logo">
+  <body>
+    <img src="images/logo-datingssite.png" class="allLogos" alt="Matchie logo">
 
     <header>
       <nav>
-        <a href="gender.html" class="backButton"><img src="images/nav_pijltje.png" alt="navigatie naar vorige pagina"></a>
-        <h1 class="stappen">Stap 6 / 7</h1>
+        <a href="gender.html"><img src="images/nav_pijltje.png" alt="navigatie naar vorige pagina"></a>
+        <h1 class="steps">Stap 6 / 7</h1>
       </nav>
     </header>
 
-    <form id="myForm">
+    <form id="addImageForm">
       <label>Voeg de mooiste foto van jezelf toe!
-        <input class="bestandFoto" type="file" accept="image/*" name="pictures" onchange="loadFile(event)" require>
+        <input type="file" accept="image/*" name="pictures" id="inputProfilePic" required>
       </label>
-      <img id="output">
 
+      <img id="output">
       <p>Wist u dat een profiel met een foto veel meer kans op een match heeft?</p>
-      <a href="text.html"><button type="submit" class="formButton">Doorgaan</button></a>
+      <a href="text.html">Doorgaan</a>
     </form>
 
     <script src="javascript/index.js"type="text/javascript"></script>
