--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- Aanmelden scherm 1 -->
-
 <!DOCTYPE html>
 
 <html lang="en">
@@ -12,29 +10,35 @@
     <title>Matchie</title>
 </head>
 
-  <body id="aanmelden">
-    <img src="images/logo-datingssite.png" class="logo" alt="Matchie logo">
+  <body>
+    <img src="images/logo-datingssite.png" id="showLogo" alt="Matchie logo">
 
-      <form id="myForm">
-        <fieldset>
-          <legend>Meld je aan!</legend>
+    <form id="signUpForm">
+      <fieldset>
+        <legend>Meld je aan!</legend>
 
-          <label for="username">Gebruikersnaam</label>
-          <input id="username" type="text" name="userName" required>
+        <label for="username">Gebruikersnaam</label>
+        <input id="username" type="text" required>
 
-          <label for="email">E-mail</label>
-          <input id="email" type="email" name="email" required>
+        <label for="email">E-mail</label>
+        <input id="email" type="email" required>
 
-          <label for="password">Wachtwoord*</label>
-          <input pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" id="password" type="password" name="password" required>
-          <p>* Min. 6 karakters, waarvan 1 hoofdletter en een cijfer.</p>
-          <button type="button" class="resetButton" onclick="resetForm()">Reset</button>
-          <a href="firstname.html"><button type="submit" id="button1">Maak een profiel aan</button></a>
-        </fieldset>
-      </form>
+        <label for="password">Wachtwoord*</label>
+        <input pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" id="password" type="password" required>
 
-      <p id="vanAanmeldenTotInloggen">Ben je al geregistreerd? <a href="">Log in</a></p>
+        <p>* Min. 6 karakters, waarvan 1 hoofdletter en een cijfer.</p>
+        <button type="button" id="resetButton">Reset</button>
+        <a href="firstname.html">Maak een profiel aan</a>
+      </fieldset>
+    </form>
 
-      <script src="javascript/index.js"type="text/javascript"></script>
-    </body>
+    <p id="toLogin">Ben je al geregistreerd? <a href="">Log in</a></p>
+
+    <div id="heartButton">
+    <p id="clickText"></p>
+    <button type="button" id="loveButton">Click me</button>
+    </div>
+
+    <script src="javascript/index.js"type="text/javascript"></script>
+  </body>
 </html>
