--- a/profile.html
+++ b/profile.html
@@ -1,5 +1,3 @@
-<!-- Mijn profiel -->
-
 <!DOCTYPE html>
 
 <html lang="en">
@@ -12,32 +10,28 @@
     <title>Matchie</title>
 </head>
 
-  <body id="mijnprofiel">
-    <img src="images/logo-datingssite.png" class="logo" alt="Matchie logo">
+  <body>
+    <img src="images/logo-datingssite.png" class="allLogos" alt="Matchie logo">
 
     <header>
       <nav>
-        <a href="text.html" class="backButton"><img src="images/nav_pijltje.png" class="pijltjeTerug" alt="navigatie naar vorige pagina"></a>
-        <h1 class="stappen">Mijn profiel</h1>
+        <a href="text.html"><img src="images/nav_pijltje.png" alt="navigatie naar vorige pagina"></a>
+        <h1 class="steps">Mijn profiel</h1>
       </nav>
     </header>
 
-    <div class="mijnProfielNaarLinks">
-      <div class="profielBackground">
-        <h2><%= firstName %>, <span><%= dateOfBirth %></span></h2>
-        <img src="images/location_icon.png" alt="locatie icoon">
+    <div id="profielBackground">
+      <h2>Karen, <span>24</span></h2>
+      <img src="images/location_icon.png" alt="locatie icoon">
 
-        <p><%= province %></p>
-        <img src="/<%= profilePic.path %>" id="profielfoto" alt="mijn profiel foto">
+      <p>Noord-Holland</p>
+      <img src="images/erik-dungan-lNUi7W4iwok-unsplash.jpg" id="profilePic" alt="mijn profiel foto">
 
-        <div class="location"></div>
+      <p>'I'm a world traveler. Do you want to join?'</p>
 
-        <p>'<%= textProfile %>'</p>
-        <img src="images/edit.png" alt="edit button">
-
-        <button type="submit">Door naar de singles!</button>
-      </div>
+      <a href="">Door naar de singles!</a>
     </div>
+
     <script src="javascript/index.js"type="text/javascript"></script>
   </body>
 </html>
