--- a/province.html
+++ b/province.html
@@ -1,5 +1,3 @@
-<!-- Stap 4: Provincie -->
-
 <!DOCTYPE html>
 
 <html lang="en">
@@ -12,19 +10,19 @@
     <title>Matchie</title>
 </head>
 
-  <body id="provincie">
-    <img src="images/logo-datingssite.png" class="logo" alt="Matchie logo">
+  <body>
+    <img src="images/logo-datingssite.png" class="allLogos" alt="Matchie logo">
 
     <header>
       <nav>
-        <a href="dateofbirth.html" class="backButton"><img src="images/nav_pijltje.png" class="pijltjeTerug" alt="navigatie naar vorige pagina"></a>
-        <h1 class="stappen">Stap 4 / 7</h1>
+        <a href="dateofbirth.html"><img src="images/nav_pijltje.png" alt="navigatie naar vorige pagina"></a>
+        <h1 class="steps">Stap 4 / 7</h1>
       </nav>
     </header>
 
-    <form class="">
-      <label for="provincie">Ik woon in de provincie:</label>
-      <select id="provincie" name="province" required>
+    <form id="addProvinceForm">
+      <label for="province">Ik woon in de provincie:</label>
+      <select id="province" required>
         <option value="Drenthe">Drenthe</option>
         <option value="Flevoland">Flevoland</option>
         <option value="Friesland">Friesland</option>
@@ -41,7 +39,7 @@
 
       <p>Zodat wij aan u kunnen laten zien hoe ver singles van u vandaan zijn!</p>
 
-      <a href="gender.html"><button type="submit" class="formButton">Doorgaan</button></a>
+      <a href="gender.html">Doorgaan</a>
     </form>
 
     <script src="javascript/index.js"type="text/javascript"></script>
